# btcusdt-regime-multistrategy-trading

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: data.yaml  data_contract.yaml  default.yaml
docs/: RUN_REPRO_SPEC.md
notebooks/: 01_evaluation.ipynb
reports/tables/: missing_gaps_1h.csv  qc_summary_1h.csv  regime_distribution_1h.csv  regime_duration_summary_1h.csv  regime_market_stats_1h.csv  regime_switch_summary_1h.csv  regime_transition_matrix_1h.csv  return_outliers_1h.csv
src/bt_regime_system/: __init__.py  cli.py
src/bt_regime_system/analysis/: plots.py
src/bt_regime_system/backtest/: costs.py  diagnostics.py  engine.py  metrics.py  stress.py  walk_forward.py
src/bt_regime_system/data/: build_bars.py  fetch_1m.py  qc_1m.py  qc_bars.py
src/bt_regime_system/features/: indicators.py
src/bt_regime_system/regime/: align.py  allocate.py  detect.py  qc.py
src/bt_regime_system/signals/: __init__.py  build.py
src/bt_regime_system/strategies/: donchian.py  ema_adx.py  mean_reversion.py
src/bt_regime_system/utils/: io.py  logging.py  time_utils.py
src/btcusdt_regime_trading/backtest/: benchmarks.py  engine.py  metrics.py
src/btcusdt_regime_trading/data/: dataset.py  fetch_klines.py  impute.py  loaders.py  qc.py
src/btcusdt_regime_trading/features/: bar_features.py
src/btcusdt_regime_trading/portfolio/: allocator.py
src/btcusdt_regime_trading/regimes/: diagnostics.py  regime_engine.py
src/btcusdt_regime_trading/report/: regime_plots.py
src/btcusdt_regime_trading/router/: strategy_router.py
src/btcusdt_regime_trading/strategies/: base.py
tests/: test_backtest_diagnostics.py  test_backtest_sanity.py  test_backtest_stress.py  test_build_bars.py  test_fetch_1m.py  test_generate_signals.py  test_metrics.py  test_qc.py  test_qc_bars.py  test_qc_regime.py  test_regime_align.py  test_regime_allocate.py  test_regime_detect.py  test_regime_plot.py  test_strategy_signals.py  test_walk_forward.py
(+1 files in other folders)
