[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btcusdt-regime-trading"
version = "0.1.0"
description = "BTCUSDT regime multi-strategy trading research"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "pandas>=1.3,<2.0",
  "requests>=2.31",
  "PyYAML>=6.0",
  "pyarrow>=6.0,<10.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
